--- a/app/src/main/res/layout/layout_newsbean_fragment_activity_main.xml
+++ b/app/src/main/res/layout/layout_newsbean_fragment_activity_main.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/refresh"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</ListView>
+    <ListView
+        android:id="@+id/listview_news_fragment_activity_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+
+</android.support.v4.widget.SwipeRefreshLayout>
